OO-3516: implements principal role for courses